--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,54 @@
-<h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<h2>Methods run, sorted chronologically</h2>
+<h3>&gt;&gt; means before, &lt;&lt; means after</h3>
+<p />
+<br />
+<em>Default suite</em>
+<p />
+<small><i>(Hover the method name to see the test class name)</i></small>
+<p />
 <table border="1">
-<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bcffb5">  <td>17/04/19 20:57:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Practice.myName()[pri:0, instance:pracTest.Practice@234bef66]">myName</td> 
-  <td>main@967765295</td>   <td></td> </tr>
-<tr bgcolor="bcffb5">  <td>17/04/19 20:57:25</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Practice.myName2()[pri:0, instance:pracTest.Practice@234bef66]">myName2</td> 
-  <td>main@967765295</td>   <td></td> </tr>
+	<tr>
+		<th>Time</th>
+		<th>Delta (ms)</th>
+		<th>Suite<br>configuration
+		</th>
+		<th>Test<br>configuration
+		</th>
+		<th>Class<br>configuration
+		</th>
+		<th>Groups<br>configuration
+		</th>
+		<th>Method<br>configuration
+		</th>
+		<th>Test<br>method
+		</th>
+		<th>Thread</th>
+		<th>Instances</th>
+	</tr>
+	<tr bgcolor="bcffb5">
+		<td>17/04/19 20:57:25</td>
+		<td>0</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td
+			title="Practice.myName()[pri:0, instance:pracTest.Practice@234bef66]">myName</td>
+		<td>main@967765295</td>
+		<td></td>
+	</tr>
+	<tr bgcolor="bcffb5">
+		<td>17/04/19 20:57:25</td>
+		<td>22</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td
+			title="Practice.myName2()[pri:0, instance:pracTest.Practice@234bef66]">myName2</td>
+		<td>main@967765295</td>
+		<td></td>
+	</tr>
 </table>
